# loupedeck-linux

./: .gitignore  .mise.toml  .pnpmrc  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.ja.md  README.md  REFACTORING.md  SECURITY.md  SETUP.md  eslint.config.js  flake.nix  install.sh  loupedeck-tray.desktop.template  loupedeck.service.template  main.js  main.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tray.ts  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: appimage.yml  ci.yml  dependabot-auto-merge.yml  nix-package.yml  release.yml
apps/backend/: eslint.config.js  main.ts  package.json  tsconfig.json
apps/desktop/: package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.appimage.conf.json  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  vite.config.ts
config/: config.json
docs/: api-reference.md  architecture.md  component-guide.md  patterns.md  setup.md
docs/plans/: 2026-01-12-npx-execution-design.md  (+1 more)
nix/: copy-sidecar-node-modules.mjs  package.nix
nix/modules/: nixos.nix
scripts/: 1password-setup.sh  1password-unlock.sh  device-doctor.sh  generate-release-notes.mjs  kill-loupedeck.sh  manage-systemd-service.sh  prepare-appimage-resources.mjs  setup-tray-autostart.sh  setup-udev.sh  start-loupedeck.sh  sync-version.mjs  workspace-setup.sh
tests/: test-grid.js  test-volume.js
web/: eslint.config.js  package-lock.json  package.json  vite.config.ts
(+162 files in other folders)
