[package]
name = "loupedeck-linux-desktop"
version = "0.1.0"
description = "Loupedeck Linux desktop shell"
authors = ["archfill"]
edition = "2021"

[lib]
name = "loupedeck_linux_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = ["tray-icon"] }
thiserror = "2"
